# Threat_Intelligence_Platform

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TROUBLESHOOTING.md  ThreatLens_SDD.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20240626_ingestion_raw_articles.py  20240626_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  health.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/ingestion/: __init__.py  base.py  feed_manager.py  models.py  normalizer.py  registry.py  rss_client.py  scheduler.py  services.py
backend/app/models/: __init__.py
backend/app/repositories/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/app/utils/: __init__.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/tests/: test_health.py  test_ingestion.py
docs/: architecture.md
scripts/: celery_wrapper.py  docker-entrypoint.sh  start.sh
