[project]
name = "threatlens"
version = "0.1.0"
description = "ThreatLens Phase 1 foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "celery>=5.4.0",
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "coverage>=7.0.0",
  "ruff>=0.6.0",
  "black>=24.4.0",
  "isort>=5.3.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["backend"] } }

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = [".", "backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
src_paths = ["backend"]

[tool.mypy]
python_version = "3.11"
files = ["backend"]
disallow_untyped_defs = true
